--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     environment:
       MYSQL_DATABASE: discusshub-db
       MYSQL_ROOT_PASSWORD: password
+      TZ: Asia/Manila
     ports:
       - "3310:3306"
     volumes:
@@ -13,6 +14,22 @@ services:
       - discusshub-network
     healthcheck:
       test: [ "CMD", "mysqladmin", "ping", "-h", "discusshub", "--password=password" ]
+      interval: 10s
+      retries: 5
+      start_period: 10s
+      timeout: 5s
+
+  redis:
+    image: redis:7.4.2
+    container_name: redis
+    volumes:
+      - redis_data:/data
+    ports:
+      - "6379:6379"
+    networks:
+      - discusshub-network
+    healthcheck:
+      test: [ "CMD", "redis-cli", "ping" ]
       interval: 10s
       retries: 5
       start_period: 10s
@@ -31,9 +48,13 @@ services:
     depends_on:
       discusshub:
         condition: service_healthy
+      redis:
+        condition: service_healthy
+    restart: always
 
 volumes:
   discusshub:
+  redis_data:
 
 networks:
   discusshub-network:
